# sinln

./: .gitignore  README.md  mysql.toml  package-lock.json  package.json  tsconfig.json  vite.config.ts
modules/: Cargo.toml  pyproject.toml  setup.py
modules/cppsrc/: .ninja_log  build.ninja  build.py  sine.cpp  sine.h  test.cpp  test.py
modules/cppsrc/cmakeproj/: cmakelists.txt  example.cpp  example1.cpp
modules/src/: lib.rs  lib1.rs  mysql_utils.rs  py_interface.rs
resource/: dl.py  mysql.toml
src/: main.ts
src-node/: index.js  package-lock.json  package.json
src-py/: main.py  pyproject.toml
src-py/src/: __init__.py  crawl4ai_script.py  database.py  download.py  en.py  pytorch_yolo.py  server.py  yolo2.py  yoloscript.py
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
src/router/: index.ts
src/views/: layout.vue
src/views/components/: add.vue  chakan.vue  components.vue  see.vue
src/views/login/: index.vue  login.vue  tauri-page.vue
src/views/menu/: menu.vue  menu1.vue  mock.js
